Criando o header.component para ser utilizado nas paginas que não sejam de login Separando o css em app.component.css Criando e melhorando a usabilidade em transactions_statement

--- a/src/app/qrcode/list_qrcode.component.html
+++ b/src/app/qrcode/list_qrcode.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="listQrcode-container" style="max-width: 350px; margin: 3rem auto; padding: 2rem; background: #fff; border-radius: 12px; box-shadow: 0 2px 16px rgba(0,0,0,0.08);">
   <h2 style="text-align: center; margin-bottom: 1.5rem; color: #333;">Consultar QR Code</h2>
 
