Adicionando o modulo de vendas

--- a/src/app/options/menu.component.html
+++ b/src/app/options/menu.component.html
@@ -15,5 +15,8 @@
     <button routerLink="/payments_statement" style="width: 100%; padding: 0.75rem; background: linear-gradient(90deg, #43e97b 0%, #38f9d7 100%); color: #fff; border: none; border-radius: 6px; font-size: 1.1rem; font-weight: 500; cursor: pointer;">
       Extrato de Pagamentos
     </button>
+    <button routerLink="/create_sale" style="width: 100%; padding: 0.75rem; background: linear-gradient(90deg, #ffb347 0%, #ffcc33 100%); color: #fff; border: none; border-radius: 6px; font-size: 1.1rem; font-weight: 500; cursor: pointer;">
+      Efetuar Venda
+    </button>
   </div>
 </div>
