--- a/src/app/statement/transactions_statement.component.html
+++ b/src/app/statement/transactions_statement.component.html
@@ -22,7 +22,7 @@
     </div>
 
     <div style="margin-top: 1.5rem;">
-      <button type="submit" style="width: 100%; padding: 0.75rem; background: linear-gradient(90deg, #ff5f5f 0%, #ff7eb3 50%, #6a5cff 100%); color: #fff; border: none; border-radius: 6px; font-size: 1rem; font-weight: 500; cursor: pointer; transition: background 0.2s;">
+      <button type="submit" class="submitButton">
         <span>Consultar</span>
       </button>
     </div>
@@ -54,9 +54,9 @@
 
   <!-- Paginação -->
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 1.5rem; margin-bottom: 1.5rem;">
-    <button (click)="onPreviousPage()" [disabled]="pageNumber === 1" class="button-navigation">Anterior</button>
+    <button (click)="onPreviousPage()" [disabled]="pageNumber === 1" class="navigationButton">Anterior</button>
     <span style="margin-right: 1rem; margin-left: 1rem; font-weight: 500; color: #555; ">Página {{ pageNumber }}</span>
-    <button (click)="onNextPage()" [disabled]="!hasNextPage" class="button-navigation">Próximo</button>
+    <button (click)="onNextPage()" [disabled]="!hasNextPage" class="navigationButton">Próximo</button>
   </div>
 
 </div>
